--- a/weather app.html
+++ b/weather app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather App</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="weather app.css">
 </head>
 <body>
 
@@ -16,6 +16,6 @@
         <div id="result"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="weather app.js"></script>
 </body>
 </html>
